They call me the exterminator the way I squash bugs B)

--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -35,7 +35,7 @@
 }
 
 .formContainer {
-  height: 100%;
+  height: auto;
   background: white;
   box-shadow: 0px 8px 20px 20px rgba(218, 218, 218, 0.25);
   border-radius: 3em 3em 0px 0px;
@@ -57,6 +57,7 @@
 
 .itemName {
   font-size: 1.4em;
+  text-align: center;
 }
 
 .itemLimit {
